--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,9 +11,10 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-show", "window-hide", "window-close", "window-maximize", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-minimize", "fs-write-file", "fs-read-file", "dialog-open", "shell-open"] }
+tauri = { version = "1", features = [ "process-exit", "window-set-focus", "system-tray", "window-set-size", "window-center", "window-show", "window-hide", "window-close", "window-maximize", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-minimize", "fs-write-file", "fs-read-file", "dialog-open", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
